--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <div class="panel panel-default">
         <div class="form-inline panel-body">
-          <button type="button" class="btn btn-sm btn-primary" ng-click="createEvent()" data-bind="click: createEvent">New Event</button>
+          <button type="button" class="btn btn-sm btn-primary" ng-click="createEvent()">New Event</button>
           <div class="form-group pull-right">
             <label>Show:</label>
             <button type="button" class="btn btn-sm btn-primary" ng-click="showRoster = !showRoster" ng-class="{active: showRoster}" autocomplete="off">Roster</button>
@@ -17,7 +17,7 @@
       <div ng-show="showRoster">
         <roster ng-show="unassignedEvent.roster.length" event="unassignedEvent" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
         <div ng-repeat="event in events | orderBy:eventsSortPredicate" class="animate-card">
-            <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
+            <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc" eventSortBy="eventsSortPredicate"></roster>
         </div>
       </div>
       <div ng-if="showRoster && events.length == 0" ng-cloak class="panel panel-default">
@@ -56,8 +56,6 @@
   </div>
 </div>
 
-
-@*<script type="text/html" id="roster-table-template">*@
 
 <script type="text/ng-template" id="roster.html">
   <div class="panel" ng-class="{'panel-warning': event.isUnassigned, 'panel-default': event.closed, 'panel-primary': !event.closed && !event.isUnassigned}">
@@ -145,15 +143,24 @@
   </form>
 </script>
 
-
-<script type="text/html" id="merge-dialog-template">
-  <p>This form will allow you to merge event &quot;<strong data-bind="text: fromEvent.name()"></strong>&quot; into another existing event.</p>
-  <div class="form-inline">
-    <div class="form-group">
-      <label>Merge Into: <select class="form-control" data-bind="options: availableEvents, optionsText: 'name', value: targetEvent"></select></label>
+<script type="text/ng-template" id="mergeDialogTemplate.html">
+  <form name="mergeForm">
+    <p>This form will allow you to merge event &quot;<strong>{{model.from.name}}</strong>&quot; into another existing event.</p>
+    <div class="form-inline">
+      <div class="form-group" ng-class="{ 'has-error': isInvalid(mergeForm, 'into')}">
+        <label for="into" class="control-label">Merge Into: </label>
+        <select name="into" class="form-control" ng-model="model.into" required="required"
+                ng-options="item.name disable when item.id == model.from.id for item in model.available | orderBy:model.eventOrderBy">
+          <option value="">-- Select an event --</option>
+        </select>
+        <div class="help-block" style="display:inline-block" ng-if="isInvalid(mergeForm, 'into')">
+          <div ng-if="mergeForm.into.$error.required">Required.</div>
+        </div>
+      </div>
     </div>
-  </div>
+  </form>
 </script>
+
 <script type="text/html" id="signout-template">
   <p>Sign out <span data-bind="text: rosterName"></span> from <span data-bind="text: eventName"></span></p>
   <div>
@@ -167,45 +174,6 @@
       <label>Miles: <input type="text" data-bind="value: miles" class="form-control" /></label>
     </div>
   </div>
-</script>
-
-<script type="text/ng-template" id="modal.html">
-  @*<div class="modal fade">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">{{title}}</h4>
-        </div>
-        <div class="modal-body">*@
-          <p>
-            Here's a more complex modal, it contains a form, data is passed to the controller
-            and data is returned from the modal.
-          </p>
-
-          <form class="form-horizontal" role="form">
-            <div class="form-group">
-              <label for="name" class="col-sm-2 control-label">Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" placeholder="Your Name" ng-model="model.name">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="age" class="col-sm-2 control-label">Age</label>
-              <div class="col-sm-10">
-                <input type="number" class="form-control" id="inputPassword3" placeholder="Age" ng-model="model.age">
-              </div>
-            </div>
-          </form>
-
-        @*</div>
-        <div class="modal-footer">
-          <button type="button" ng-click="close()" class="btn btn-primary" data-dismiss="modal">OK</button>
-          <button type="button" ng-click="cancel()" class="btn">Cancel</button>
-        </div>
-      </div>
-    </div>
-  </div>*@
 </script>
 
 @section scripts {
@@ -225,7 +193,7 @@
         return -event.opened.unix() + (event.closed ? 100000000 : 0);
       },
       calls: eventsService.calls,
-      createEvent: function () { EditModalService.edit('Create New Event', new EventModel(), eventsService.save); }
+      createEvent: function () { EditModalService.edit('editDialogTemplate.html', 'Create New Event', new EventModel(), eventsService.save); }
     })
 
     eventsService.load();
