--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
       <div ng-show="showRoster">
         <roster ng-show="unassignedEvent.roster.length" event="unassignedEvent" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
         <div ng-repeat="event in events | orderBy:eventsSortPredicate" class="animate-card">
-            <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc" eventSortBy="eventsSortPredicate"></roster>
+          <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc" eventSortBy="eventsSortPredicate"></roster>
         </div>
       </div>
       <div ng-if="showRoster && events.length == 0" ng-cloak class="panel panel-default">
@@ -41,7 +41,7 @@
           </thead>
           <tbody ng-if="calls.length > 0" ng-repeat="call in calls | orderBy: callsSort : callsSortDesc">
             <tr>
-              <td class="text-right" style="width:1em; white-space:nowrap">{{call.timeText}}</td>
+              <td class="text-right" style="width:1em; white-space:nowrap">{{call.time | eventTime : getToday()}}</td>
               <td><strong>{{call.name}}</strong></td>
               <td class="hidden-xs"><a ng-href="{{'tel:' + call.number}}">{{call.number}}</a></td>
               <td class="hidden-xs">
@@ -62,28 +62,31 @@
 @RenderPage("_SignoutDialog.cshtml")
 
 @section scripts {
-@Scripts.Render("~/bundles/app")
-<script type="text/javascript">
-  angular.module('missionlineApp').controller('IndexCtrl', ['$scope', 'EditModalService', 'eventsService', function ($scope, EditModalService, eventsService) {
-    $.extend($scope, {
-      showRoster: true,
-      showCalls: false,
-      unassignedEvent: { 'name': 'Unassigned', roster: [{ name: 'Matt' }], isUnassigned: true },
-      callsSort: 'time',
-      callsSortDesc: true,
-      rosterSort: 'timeOut',
-      rosterSortDesc: true,
-      events: eventsService.list,
-      eventsSortPredicate: function (event) {
-        return -event.opened.unix() + (event.closed ? 100000000 : 0);
-      },
-      calls: eventsService.calls,
-      createEvent: function () { EditModalService.edit('editDialog.html', 'Create New Event', new EventModel(), eventsService.save); }
-    })
+  @Scripts.Render("~/bundles/app")
+  <script type="text/javascript">
+    angular.module('missionlineApp').controller('IndexCtrl', ['$scope',
+      'EditModalService', 'eventsService', 'rosterService', 'callsService',
+      function ($scope, EditModalService, eventsService, rosterService, callsService) {
+        $.extend($scope, {
+          showRoster: true,
+          showCalls: false,
+          unassignedEvent: { 'name': 'Unassigned', roster: [{ name: 'Matt' }], isUnassigned: true },
+          callsSort: 'time',
+          callsSortDesc: true,
+          rosterSort: 'timeOut',
+          rosterSortDesc: true,
+          events: eventsService.list,
+          eventsSortPredicate: function (event) {
+            return -event.opened.unix() + (event.closed ? 100000000 : 0);
+          },
+          calls: callsService.calls,
+          createEvent: function () { EditModalService.edit('editDialog.html', 'Create New Event', new EventModel(), eventsService.save); },
+          getToday: function() { return moment().startOf('day'); }
+        })
+        eventsService.load();
+        callsService.load();
+      }]);
 
-    eventsService.load();
-  }]);
-
-  window.hasHubs = true;
-</script>
+    window.hasHubs = true;
+  </script>
 }
