--- a/src/Website/Views/Home/Me.cshtml
+++ b/src/Website/Views/Home/Me.cshtml
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      View the <a href="~">Dashboard</a>
+      View the <a href="~/">Dashboard</a>
     </div>
   </div>
 </div>
