--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -1,94 +1,115 @@
 ﻿@{
   ViewBag.NgApp = "missionlineApp";
-  ViewBag.Title = Strings.DashboardTitle;
+  ViewBag.Title = ViewBag.MySelf.Name;
 }
-<div ng-controller="IndexCtrl">
+<div ng-controller="MeCtrl">
   <div class="row">
-    <div class="col-xs-12 col-md-8 col-md-offset-2">
-      <div class="panel panel-default">
-        <div class="form-inline panel-body">
-          <button type="button" class="btn btn-sm btn-primary" ng-click="createEvent()">New Event</button>
-          <a href="~/me" class="btn btn-sm btn-primary">Sign In/Out</a>
-          <div class="form-group pull-right">
-            <label>Show:</label>
-            <button type="button" class="btn btn-sm btn-primary" ng-click="showRoster = !showRoster" ng-class="{active: showRoster}" autocomplete="off">Roster</button>
-            <button type="button" class="btn btn-sm btn-primary" ng-click="showCalls = !showCalls" ng-class="{active: showCalls}" autocomplete="off">Call Log</button>
-          </div>
+    <div class="col-xs-12 col-md-6 col-md-offset-3 list-group" ng-cloak="true">
+      <div class="panel panel-warning" ng-if="isInUnassigned()">
+        <div class="panel-heading">Unassigned Signin</div>
+        <div class="panel-body">
+          <p><strong>You signed into the mission line but we didn't catch which mission you wanted to sign in with. Please sign out and sign into another mission.</strong></p>
+          <button class="btn pull-right" ng-click="signout({id: null})">Sign Out</button>
         </div>
-      </div>
-      <div ng-show="showRoster">
-        <roster ng-show="unassignedEvent.roster.length" event="unassignedEvent" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
-        <div ng-repeat="event in events | orderBy:eventsSortPredicate" class="animate-card">
-          <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc" eventSortBy="eventsSortPredicate"></roster>
-        </div>
-      </div>
-      <div ng-if="showRoster && events.length == 0" ng-cloak class="panel panel-default">
-        <div class="panel-body">{{events.loading ? "Loading ..." : "No recent events"}}</div>
       </div>
     </div>
-  </div>
-
-  <div class="row" ng-show="showCalls" ng-cloak>
-    <div class="col-xs-12">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Call Log</div>
-        <table class="table table-striped table-condensed">
-          <thead>
-            <tr>
-              <th style="width:1em" ng-click="callsSort='time'; callsSortDesc=!callsSortDesc">Time</th>
-              <th ng-click="callsSort='name'; callsSortDesc=!callsSortDesc">Name</th>
-              <th class="hidden-xs" ng-click="callsSort='number'; callsSortDesc=!callsSortDesc">Number</th>
-              <th class="hidden-xs">Message</th>
-            </tr>
-          </thead>
-          <tbody ng-if="calls.length > 0" ng-repeat="call in calls | orderBy: callsSort : callsSortDesc">
-            <tr>
-              <td class="text-right" style="width:1em; white-space:nowrap">{{call.time | eventTime : getToday()}}</td>
-              <td><strong>{{call.name}}</strong></td>
-              <td class="hidden-xs"><a ng-href="{{'tel:' + call.number}}">{{call.number}}</a></td>
-              <td class="hidden-xs">
-                <audio ng-if="call.recording" ng-src="{{call.recording}}" controls="controls" />
-              </td>
-            </tr>
-          </tbody>
-          <tbody ng-if="calls.length == 0"><tr><td colspan="3">No calls</td></tr></tbody>
-        </table>
+    <div class="col-xs-12 col-md-6 col-md-offset-3 list-group" ng-cloak="true">
+      <div class="list-group-item" ng-repeat="event in events | orderBy:eventsSortPredicate">
+        <i class="fa fa-2x fa-fw fa-pull-left" ng-class="{'fa-ban': event.closed, 'fa-bullhorn': !event.closed }"></i>
+        <button class="btn btn-success pull-right" ng-click="signin(event)" ng-if="canSignIn(event)">Sign In</button>
+        <button class="btn pull-right" ng-click="signout(event)" ng-if="canSignOut(event)">Sign Out</button>
+        <div style="padding-left: 3.6em">
+          <h4 class="list-group-item-heading" ng-class="{'font-bold': !event.closed}">{{event.name}}</h4>
+          <p>Opened {{event.opened.fromNow()}}, {{event.roster.length}} responders</p>
+          <p><strong>{{getEventStatus(event)}}</strong></p>
+        </div>
       </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      View the <a href="~/dashboard">Dashboard</a>
     </div>
   </div>
 </div>
 
-@RenderPage("_Roster.cshtml")
-@RenderPage("_EditDialog.cshtml")
-@RenderPage("_MergeDialog.cshtml")
+<script type="text/ng-template" id="signoutDialog.html">
+  <p>Sign out from <strong>{{model.name}}</strong><span ng-if="model.next"> before signing into {{model.next}}</span>?</p>
+</script>
 @RenderPage("_SignoutDialog.cshtml")
-@RenderPage("_CloseDialog.cshtml")
 
 @section scripts {
   @Scripts.Render("~/bundles/app")
   <script type="text/javascript">
-    angular.module('missionlineApp').controller('IndexCtrl', ['$scope',
-      'EditModalService', 'eventsService', 'rosterService', 'callsService',
-      function ($scope, EditModalService, eventsService, rosterService, callsService) {
+    var memberId = '@ViewBag.MySelf.Id';
+    angular.module('missionlineApp').controller('MeCtrl', ['$scope', '$rootScope',
+      'EditModalService', 'eventsService', 'rosterService',
+      function ($scope, $rootScope, EditModalService, eventsService, rosterService) {
         $.extend($scope, {
-          myself: @(new HtmlString(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.Myself))),
-          showRoster: true,
-          showCalls: false,
-          unassignedEvent: eventsService.unassigned,
-          callsSort: 'time',
-          callsSortDesc: true,
-          rosterSort: 'timeOut',
-          rosterSortDesc: true,
           events: eventsService.list,
           eventsSortPredicate: function (event) {
             return -event.opened.unix() + (event.closed ? 100000000 : 0);
           },
-          calls: callsService.calls,
-          createEvent: function () { EditModalService.edit('editDialog.html', 'Create New Event', new EventModel(), eventsService.save); },
-          getToday: function () { return moment().startOf('day'); },
+          getEventStatus: function (event) {
+            var parts = rosterService.signins.filter(function (f) {
+              return f.memberId == memberId && f.eventId == event.id
+            });
+            if (!parts.length) { return null; }
+            if (parts[0].timeOut) {
+              return "You signed out " + parts[0].timeOut.fromNow();
+            }
+            else {
+              return "You signed in " + parts[0].timeIn.fromNow();
+            }
+          },
+          canSignIn: function (event) {
+            return !event.closed
+              && rosterService.signins
+                .filter(function (f) {
+                  return f.memberId == memberId && f.eventId == event.id && !f.timeOut
+                }).length == 0;
+          },
+          canSignOut: function (event) {
+            return rosterService.signins.filter(function (f) {
+              return f.memberId == memberId && f.eventId == event.id && !f.timeOut
+            }).length > 0;
+          },
+          signin: function (evt) {
+            var signedInEvents = rosterService.signins.filter(function (f) {
+              return f.memberId == memberId && !f.timeOut && f.eventId != evt.id
+            });
+            if (signedInEvents.length) {
+              if (signedInEvents[0].eventId == evt.id) {
+                alert('Already signed in');
+                return;
+              }
+              else {
+                alert('Must sign out from other missions first');
+                return;
+              }
+            }
+
+            if (!confirm("Sign into " + evt.name + "?")) {
+              return;
+            }
+            rosterService.save(new SigninModel({ eventId: evt.id, memberId: memberId, timeIn: moment() }));
+          },
+          signout: function (evt) {
+            var rosterEntry = rosterService.signins.filter(function (f) { return f.memberId == memberId && f.eventId == evt.id && !f.timeOut });
+            if (rosterEntry.length > 0) {
+              var data = rosterEntry[0].getData();
+              data.timeOut = moment();
+              EditModalService.edit('signoutDialog.html', 'Sign Out', new SigninModel(data), rosterService.save, { event: evt });
+
+            } else {
+              alert("Couldn't figure out how to sign you out");
+            }
+          },
+          isInUnassigned: function () {
+            return rosterService.signins.filter(function (f) { return f.memberId == memberId && f.eventId == null && !f.timeOut; }).length > 0;
+          }
         })
+
         eventsService.load();
-        callsService.load();
+        rosterService.load();
       }]);
 
     window.hasHubs = true;
