--- a/src/Website/Views/Carpooling/Index.cshtml
+++ b/src/Website/Views/Carpooling/Index.cshtml
@@ -149,7 +149,6 @@
     };
     var currentLocationCoords = null;
     var mapInitializedDeferral = null;
-    var currentLocationLoadedDeferral = null;
     var map;
     var carpoolerMarkers = [];
     var changeLocationMap;
@@ -158,15 +157,10 @@
     var modals = [personModal, updateInfoModal];
 
     angular.module('missionlineApp').controller('CarpoolingCtrl', ['$scope', '$q', '$rootScope',
-      'EditModalService', 'carpoolingService',
-      function ($scope, $q, $rootScope, EditModalService, carpoolingService) {
+      'EditModalService', 'carpoolingService', 'carpoolingModelService',
+      function ($scope, $q, $rootScope, EditModalService, carpoolingService, carpoolingModelService) {
         $.extend($scope, {
-          model: {
-            carpoolers: null,
-            ownCarpoolerEntry: null,
-            isChangingLocation: false,
-            loading: true
-          },
+          model: carpoolingModelService.model,
           populateMapWithCarpoolers: function () {
             $scope.model.carpoolers.forEach(function (carpooler) {
 
@@ -193,7 +187,7 @@
             updateInfoModal.show();
           },
           changeLocation: function () {
-            $scope.model.isChangingLocation = true;
+            carpoolingModelService.changeLocation();
             var center = {
               lat: $scope.model.ownCarpoolerEntry.locationLatitude,
               lng: $scope.model.ownCarpoolerEntry.locationLongitude
@@ -210,38 +204,26 @@
               changeLocationMap.setZoom(map.zoom);
             }
           },
-          cancelChangeLocation: function () {
-            $scope.model.isChangingLocation = false;
-          },
-          saveChangedLocation: function () {
-            $scope.model.savingLocation = true;
-            carpoolingService.updateCarpoolerInfo(eventId, memberId, {
-              LocationLatitude: changeLocationMap.getCenter().lat(),
-              LocationLongitude: changeLocationMap.getCenter().lng()
-            }).then(function () {
-              $scope.model.savingLocation = false;
-              $scope.model.isChangingLocation = false;
-              $scope.reload();
-            }, function () {
-              $scope.model.savingLocation = false;
-            });
-          },
+          cancelChangeLocation: carpoolingModelService.cancelChangeLocation,
+          saveChangedLocation: carpoolingModelService.saveChangedLocation,
           addOwnLocationToMap: function (map) {
-            currentLocationLoadedDeferral.promise.then(function () {
-              // Draw the location on the map
-              var marker = new google.maps.Marker({
-                position: { lat: currentLocationCoords.latitude, lng: currentLocationCoords.longitude },
-                icon: {
-                  path: 'M-2,2a2,2 0 1,0 4,0a2,2 0 1,0 -4,0',
-                  fillColor: '#4285F4',
-                  fillOpacity: 1,
-                  scale: 3,
-                  strokeColor: 'white',
-                  strokeWeight: 2
-                },
-                zIndex: 100,
-                map: map
-              });
+            carpoolingModelService.getCurrentLocation().then(function (coords) {
+              if (coords != null) {
+                // Draw the location on the map
+                var marker = new google.maps.Marker({
+                  position: { lat: coords.latitude, lng: coords.longitude },
+                  icon: {
+                    path: 'M-2,2a2,2 0 1,0 4,0a2,2 0 1,0 -4,0',
+                    fillColor: '#4285F4',
+                    fillOpacity: 1,
+                    scale: 3,
+                    strokeColor: 'white',
+                    strokeWeight: 2
+                  },
+                  zIndex: 100,
+                  map: map
+                });
+              }
             });
           },
           selectCarpooler(memberId) {
@@ -287,54 +269,33 @@
           },
           isViewingPerson() {
             return window.location.hash.length > 1;
-          },
-          reload: function () {
-            $scope.model.loading = true;
-            $scope.model.carpoolers = null;
-            $scope.model.ownCarpoolerEntry = null;
-
-            // Clear all carpooler markers from the map
-            $.each(carpoolerMarkers, function (idx, marker) {
-              marker.setMap(null);
-            });
-            carpoolerMakers = [];
-
-            carpoolingService.getCarpoolers(eventId).then(function (carpoolers) {
-              $scope.model.carpoolers = carpoolers;
-              $.each(carpoolers, function (idx, carpooler) {
-                if (carpooler.member.id === memberId) {
-                  $scope.model.ownCarpoolerEntry = new CarpoolerModel(carpooler);
-                }
-              });
-              mapInitializedDeferral.promise.then(function () {
-                $scope.populateMapWithCarpoolers();
-                $scope.model.loading = false;
-              });
-            });
           }
         })
 
         mapInitializedDeferral = $q.defer();
-        currentLocationLoadedDeferral = $q.defer();
 
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function (position) {
-            currentLocationCoords = position.coords;
-            currentLocationLoadedDeferral.resolve();
+        carpoolingModelService.getCurrentLocation().then(function (coords) {
+          if (coords != null) {
             if (map) {
-              map.panTo({ lat: currentLocationCoords.latitude, lng: currentLocationCoords.longitude });
+              map.panTo({ lat: coords.latitude, lng: coords.longitude });
             }
             mapInitializedDeferral.promise.then(function () {
               $scope.addOwnLocationToMap(map);
             });
-          }, function () {
-            currentLocationLoadedDeferral.resolve();
-          });
-        } else {
-          currentLocationLoadedDeferral.resolve();
-        }
+          }
+        });
 
-        $scope.reload();
+        $scope.$watch('model.carpoolers', function () {
+          // Clear all carpooler markers from the map
+          $.each(carpoolerMarkers, function (idx, marker) {
+            marker.setMap(null);
+          });
+          if ($scope.model.carpoolers) {
+            $scope.populateMapWithCarpoolers();
+          }
+        });
+
+        carpoolingModelService.load(eventId, memberId);
 
         window.onhashchange = $scope.updateBasedOnHash;
 
@@ -351,114 +312,29 @@
 
 
     angular.module('missionlineApp').controller('PersonModalCtrl', ['$scope', '$q', '$rootScope',
-      'EditModalService', 'carpoolingService',
-      function ($scope, $q, $rootScope, EditModalService, carpoolingService) {
+      'EditModalService', 'carpoolingPersonModelService',
+      function ($scope, $q, $rootScope, EditModalService, carpoolingPersonModelService) {
         $.extend($scope, {
-          model: {
-            loading: true,
-            carpooler: null,
-            carpoolerTypeText: ''
-          },
-          loadCarpooler: function (memberId) {
-            $scope.model.loading = true;
-            $scope.model.carpooler = null;
-            $scope.model.carpoolerTypeText = '';
-            carpoolingService.getCarpooler(eventId, memberId).then(function (carpooler) {
-              $scope.model.carpooler = carpooler;
-              var typeText;
-              if (carpooler.canBeDriver && carpooler.canBePassenger) {
-                typeText = 'Can drive or be passenger!';
-              }
-              else if (carpooler.canBeDriver) {
-                typeText = 'Can drive!';
-              }
-              else if (carpooler.canBePassenger) {
-                typeText = 'Looking for a ride!';
-              }
-              else {
-                typeText = 'Not carpooling';
-              }
-              $scope.model.carpoolerTypeText = typeText;
-              $scope.model.loading = false;
-            });
-          }
+          model: carpoolingPersonModelService.model
         });
 
         $('#personModal').on('show.bs.modal', function () {
           var memberId = window.location.hash.substr(1);
-          $scope.loadCarpooler(memberId);
+          carpoolingPersonModelService.loadCarpooler(eventId, memberId);
         });
 
       }]);
 
     angular.module('missionlineApp').controller('UpdateInfoModalCtrl', ['$scope', '$q', '$rootScope',
-      'EditModalService', 'carpoolingService',
-      function ($scope, $q, $rootScope, EditModalService, carpoolingService) {
+      'EditModalService', 'carpoolingUpdateInfoModelService',
+      function ($scope, $q, $rootScope, EditModalService, carpoolingUpdateInfoModelService) {
         $.extend($scope, {
-          model: {
-            canBeDriver: false,
-            canBePassenger: false,
-            vehicleDescription: '',
-            message: '',
-            alreadyHasLocation: false,
-            loading: true,
-            saving: false
-          },
-          load: function () {
-            $scope.model.loading = true;
-            carpoolingService.getUpdateInfo(eventId, memberId).then(function (carpooler) {
-              $scope.model.canBeDriver = carpooler.canBeDriver;
-              $scope.model.canBePassenger = carpooler.canBePassenger;
-              $scope.model.vehicleDescription = carpooler.vehicleDescription;
-              $scope.model.message = carpooler.message;
-              $scope.model.alreadyHasLocation = carpooler.locationLatitude && carpooler.locationLongitude;
-              $scope.model.loading = false;
-            });
-          },
-          save: function () {
-            $scope.model.saving = true;
-            if (!$scope.model.canBeDriver && !$scope.model.canBePassenger) {
-              carpoolingService.removeCarpooler(eventId, memberId).then(function () {
-                location.reload();
-              }, function () {
-                $scope.model.saving = false;
-              });
-            }
-            else {
-              var updatedInfo = {
-                CanBeDriver: $scope.model.canBeDriver,
-                CanBePassenger: $scope.model.canBePassenger,
-                VehicleDescription: $scope.model.vehicleDescription,
-                Message: $scope.model.message
-              };
-
-              var finishSave = function () {
-                carpoolingService.updateCarpoolerInfo(eventId, memberId, updatedInfo).then(function () {
-                  location.reload();
-                }, function () {
-                  $scope.model.saving = false;
-                });
-              };
-
-              if ($scope.model.alreadyHasLocation) {
-                finishSave();
-              } else {
-                if (navigator.geolocation) {
-                  navigator.geolocation.getCurrentPosition(function (position) {
-                    updatedInfo.LocationLatitude = postion.coords.latitude;
-                    updatedInfo.LocationLongitude = position.coords.longitude;
-                    finishSave();
-                  });
-                } else {
-                  alert('Geolocation not supported');
-                }
-              }
-            }
-          }
+          model: carpoolingUpdateInfoModelService.model,
+          save: carpoolingUpdateInfoModelService.save
         });
 
         $('#updateInfoModal').on('show.bs.modal', function () {
-          $scope.load();
+          carpoolingUpdateInfoModelService.load();
         });
 
       }]);
